# qalam

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  Roadmap.md  package-lock.json  package.json
crates/qalam/: Cargo.toml
crates/qalam-core/: Cargo.toml
crates/qalam-core/src/: buffer.rs  document.rs  lib.rs  selection.rs
crates/qalam-lsp/: Cargo.toml
crates/qalam-lsp/src/: client.rs  lib.rs  protocol.rs
crates/qalam-syntax/: Cargo.toml
crates/qalam-syntax/src/: lib.rs  tarqeem.rs
crates/qalam-text/: Cargo.toml
crates/qalam-text/src/: bidi.rs  layout.rs  lib.rs  shaping.rs
crates/qalam-ui/: Cargo.toml
crates/qalam-ui/src/: app.rs  editor.rs  file_panel.rs  lib.rs  rtl_editor.rs  theme.rs
crates/qalam/src/: main.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.tsx
src/renderer/components/: FileExplorer.tsx  SettingsPanel.tsx
src/renderer/stores/: useEditorSettings.ts  useFileExplorer.ts  useLSPStore.ts  useTabStore.ts
src/renderer/styles/: global.css
src/renderer/themes/: index.ts
